Do not re-use SyncedPublisher instances
Fixes #9